--- a/FinalProject.csproj
+++ b/FinalProject.csproj
@@ -10,7 +10,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Images\IceCream1.jpeg" />
+    <None Include="wwwroot\Images\IceCream2.jpeg" />
+    <None Include="wwwroot\Images\IceCream3.jpeg" />
+    <None Include="wwwroot\Images\IceCream4.jpeg" />
   </ItemGroup>
 
 </Project>
