--- a/appsettings.json
+++ b/appsettings.json
@@ -1,24 +1,39 @@
 {
-    "Logging": {
+  "Logging": {
+    "EventLog": {
+      "LogLevel": {
+        "Default": "Warning",
+        "Microsoft.AspNetCore.Mvc": "Information",
+        "Microsoft.AspNetCore.Hosting.Diagnostics": "Information",
+        "Microsoft.WindowsAdminCenter.Common.ServiceLog": "Information"
+      }
+    },
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft": "Debug",
+      "Default": "Information",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.3.181;port=3306;Database=dotnetdb;User=root;Password=Mo22924!;AllowPublicKeyRetrieval=true;SslMode=none;ConvertZeroDateTime=true;"
+    "DefaultConnection": "Server=mysql;port=3306;Database=dotnetdb;User=root;Password=Mo22924!;AllowPublicKeyRetrieval=true;SslMode=none;ConvertZeroDateTime=true;"
   },
-
-  "AllowedHosts": "*",
-
   "Jwt": {
     "Key": "Mcandrew!Mcandrew!Mcandrew!Mcandrew!Mcandrew!",
     "Issuer": "Mcandrew Okwei",
     "Audience": "Ice Cream shoppers"
+  },
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http1AndHttp2"
+    },
+    "Endpoints": {
+      "Https": {
+        "Url": "https://+:443",
+        "Certificate": {
+          "Path": "Cert/drewslab.selfip.com.pfx",
+          "AllowInvalid": true          
+        }        
+      }
+    } 
   }
-
 }
-
-
